force-app/main/default/objects/EMS_LM_Leave_Credit__c/EMS_LM_Leave_Credit__c.object-meta.xml
<CustomObject>
    <description>To credit the Leaves to Employees as per Policies</description>
    <label>Leave Credit</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Leave Credit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>