force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/CompOff_Week__c.field-meta.xml
<CustomField>
    <fullName>CompOff_Week__c</fullName>
    <label>CompOff Week</label>
    <type>Date</type>
</CustomField>