force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/CreditedMonthYear__c.field-meta.xml
<CustomField>
    <fullName>CreditedMonthYear__c</fullName>
    <formula>TEXT(MONTH(EMS_LM_Leave_Credited_Date__c))+TEXT(YEAR(EMS_LM_Leave_Credited_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreditedMonthYear</label>
    <type>Text</type>
</CustomField>