force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/EMS_LM_Employee__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Leave_Credits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>