force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/EMS_LM_Leave_Credited_Date__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leave_Credited_Date__c</fullName>
    <description>Total No of Leaves Credited to employee</description>
    <label>Leave Credited Date</label>
    <type>Date</type>
</CustomField>