force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/EMS_LM_Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leave_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leave Type</label>
    <referenceTo>EMS_LM_Leave__c</referenceTo>
    <relationshipName>Leave_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>