force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/EMS_LM_Leaves_Credited__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Leaves_Credited__c</fullName>
    <label>Leaves Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>