force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/EMS_LM_Select_Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_Select_Leave_Type__c</fullName>
    <label>Select Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Paternity Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement Leave</fullName>
            </value>
            <value>
                <fullName>Loss of Pay</fullName>
            </value>
            <value>
                <fullName>Work from Home</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Compensatory Off</fullName>
            </value>
            <value>
                <fullName>Paid time off</fullName>
            </value>
            <value>
                <fullName>UnPaid time off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>