force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/Leave_Available__c.field-meta.xml
<CustomField>
    <fullName>Leave_Available__c</fullName>
    <formula>EMS_LM_Leaves_Credited__c - Leave_Utilized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>