force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/Leave_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Name__c</fullName>
    <formula>EMS_LM_Leave_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Type (Name)</label>
    <type>Text</type>
</CustomField>