force-app/main/default/objects/EMS_LM_Leave_Credit__c/fields/Leave_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Leave_Utilized__c</fullName>
    <label>Leave Utilized</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>